# gwen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE  README.md  TODO.md  _config.yml  a.cpp  a.out  b.cpp  config.toml  exe  gen.cpp  gwen  index.md  result.json  verify_files.json
.agents/: AGENTS.md  DUMP_RULES.md
.github/workflows/: verify.yml
.verify-helper/docs/: _config.yml  index.md
doc/: COMPETITIVE_VERIFIER.md  DEVELOPMENT.md  README.md  RULES.md  dump.md  fast_set.md  io.md  template.md  test_specification.md  types.md
doc/alge/: abel.md  acted_monoid.md  monoid.md  range_affine_range_sum_monoid.md  ring.md
doc/algebra/: basic_monoid.md
doc/algo/: counting_sort.md  idxsort.md  lis.md  runlength.md
doc/bbst/: implicit_treap.md  lazy_implicit_treap.md  lazy_sorted_treap.md  prod_implicit_treap.md  prod_sorted_treap.md  sorted_treap.md
doc/container/: associative_treap.md  fenwick_tree.md  implicit_treap.md  mdarray.md  segtree.md  sorted_treap.md  trie.md
doc/core/: bit.md  constants.md  grid.md  macro.md  utils.md
doc/ds/: dynamic_segment_tree.md  fenwick_tree.md  lazy_dynamic_segment_tree.md  lazy_segment_tree.md  prefix_sum.md  segment_tree.md  trie.md  wavelet_matrix.md
doc/geo/: graham_scan.md  point.md
doc/graph/: csr.md  dijkstra.md  edge.md  forest.md  graph.md  hld.md  tree_lca.md  weighted_dsu.md  xor_linked_tree.md
doc/hash/: rolling_hash.md  zobrist.md
doc/io/: vector.md  yesno.md
planning/: TODO.md  feature_ideas.md  inprove_development.md  rules.md  task_ds_segtree.md  task_graph_base.md  task_graph_lca_dsu.md  task_math_combination.md  task_math_prime.md  task_mod_lis_trie.md  task_mod_swag.md  transplant_from_master.md
scripts/: README.md  build.sh  format.sh  install_pre_commit_hook.sh  manage_problems.py  run_code_gwen.sh  run_tests.sh  run_verify.sh  summary.py  test.sh  verify.sh
test/: CMakeLists.txt  conftest.py  specification.md  test_problems.py
test/helpers/: discover.py  runner.py
test/problem_runner/: runner_utils.hpp  test_problems.cpp
test/problems/factorize/: meta.yaml  naive.cpp  problem.md  solution.cpp
test/problems/lca/: meta.yaml  problem.md  solution.cpp
test/problems/lca/cases/: 01.in
test/unit/: CMakeLists.txt  container_trie_test.cpp  core_test.cpp  dijkstra_test.cpp  ds_test.cpp  ds_trie_test.cpp  ds_wavelet_matrix_test.cpp  dump_test.cpp  dynamic_segment_tree_test.cpp  graph_test.cpp  graph_tree_lca_test.cpp  hash_rolling_hash_test.cpp  hld_test.cpp  io_test.cpp  lazy_segment_tree_test.cpp  lazy_sorted_treap_test.cpp  math_matrix_test.cpp  math_prime_test.cpp  math_test.cpp  mod_mod61_test.cpp  mod_modint_test.cpp  prod_implicit_treap_test.cpp  prod_sorted_treap_test.cpp  query_mo_test.cpp  query_range_add_update_sum_test.cpp  query_swag_test.cpp  segment_tree_test.cpp  sorted_treap_test.cpp  template.cpp.sample  test_alge.cpp  test_dump.cpp  test_factorize.cpp  test_fenwick_tree.cpp  test_mdarray.cpp  test_naive_array.cpp  test_polynomial_difference_array.cpp  test_rolling_hash.cpp  test_testlib_sample.cpp  test_timer.cpp  test_types.cpp  (+3 more)
test/unit/alge/: acted_monoid_test.cpp  range_affine_range_sum_monoid_test.cpp
test/unit/algo/: algo_counting_sort_test.cpp  algo_lis_test.cpp  algo_test.cpp
test/unit/bbst/: implicit_treap_test.cpp  lazy_implicit_treap_test.cpp  lazy_sorted_treap_test.cpp  prod_implicit_treap_test.cpp  prod_sorted_treap_test.cpp  sorted_treap_test.cpp
test/unit/core/: core_test.cpp  template_test.cpp
test/unit/ds/: ds_test.cpp  ds_trie_test.cpp  ds_wavelet_matrix_test.cpp  dynamic_segment_tree_test.cpp  fast_set_test.cpp  lazy_dynamic_segment_tree_test.cpp  lazy_segment_tree_test.cpp  segment_tree_test.cpp  test_fenwick_tree.cpp  test_naive_array.cpp
test/unit/graph/: dijkstra_test.cpp  graph_forest_test.cpp  graph_test.cpp  graph_tree_lca_test.cpp  graph_weighted_dsu_test.cpp  hld_test.cpp
test/unit/hash/: hash_rolling_hash_test.cpp
test/unit/io/: io_test.cpp
test/unit/math/: math_combination_test.cpp  math_matrix_test.cpp  math_prime_test.cpp  math_test.cpp  math_xor_basis_test.cpp
test/unit/mod/: mod_mod61_test.cpp  mod_modint_test.cpp
test/unit/query/: query_mo_test.cpp  query_range_add_update_sum_test.cpp  query_swag_test.cpp
test/unit/utils/: utils_compress_test.cpp  utils_node_pool_test.cpp  utils_xorshift_test.cpp
test/utils/: README.md  naive_array.hpp  random_seed.hpp
verify/: factorize.cpp  implicit_treap_noncommutative.cpp  jump_on_tree.cpp  lca.cpp  mdarray.cpp  primality_test.cpp  rolling_hash.cpp
(+337 files in other folders)
